# twg-2024-2

./: .gitignore  Cargo.toml  README.md
assets/: derevotyan.glb  dimas.glb  duck.glb  kisanya.glb  nulch.glb  rasp.glb  swiborg.glb
src/: battle_bridge.rs  complex_anim_player.rs  fight_home.html  laser.rs  main.rs  wheel.rs
src/battle/: effect.rs  fight.rs  hero.rs  mod.rs  modifier.rs  player.rs
src/battle/ability/: attack.rs  beam.rs  fire_cube.rs  foo.rs  halve.rs  heal_beam.rs  mod.rs  regen_mana.rs  star_wars.rs
src/battle/card/: agility_capsule.rs  agility_web.rs  capture_maneuver.rs  combat_medkit.rs  decrease_attack.rs  energy_drain.rs  energy_source.rs  exhaustion.rs  healing_drone.rs  healing_flow.rs  hero_might.rs  illness.rs  increase_attack.rs  increase_attack_speed.rs  life_essence.rs  life_symbiosis.rs  lucky_bullet.rs  magic_generator.rs  mana_crystal.rs  mod.rs  plasma_charge.rs  plasma_strike.rs  power_drainer.rs  precision_hit.rs  shadow_bastion.rs  shadow_caster.rs  shadow_dance.rs  shock_wave.rs  shooter_luck.rs  (+2 more)
src/component/: arena.rs  beam.rs  complex_anim_player.rs  fight_state.rs  game_timer.rs  home.rs  land.rs  mod.rs  model.rs  projectile.rs  wheel.rs
src/hero/: derevotyan.rs  dimas.rs  dtyan.rs  duck.rs  kisanya.rs  mod.rs  nulch.rs  rasp.rs
src/scene/: avatars.rs  fight_arena.rs  fight_home.rs  game_ended.rs  landing.rs  mod.rs  select_hero.rs  splash.rs
src/ui/: avatar.rs  cards.rs  fight_arena_layout.rs  fight_home_layout.rs  game_timer.rs  hp_mana_bars.rs  layout.rs  mod.rs  players.rs  screen.rs  stats.rs
