[package]
name = "twg-2024-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_embedded_assets = "0.10.2"
bevy-inspector-egui = "0.24.0"
bevy_flycam = "0.13.0"
bevy_hanabi = "0.11.0"
bevy_mod_raycast = "0.17.0"
bevy_rapier3d = "0.26.0"
bevy_round_ui = { git = "https://github.com/robertdodd/bevy_round_ui", tag = "v2.0.0" }
