[package]
name = "twg-2024-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_embedded_assets = "0.10.2"
bevy-inspector-egui = "0.24.0"
bevy_hanabi = "0.11.0"
bevy_mod_raycast = "0.17.0"
rand = "0.8.5"
dyn-clone = "1.0.17"
iyes_perf_ui = "0.2.0"